--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
 
 <tbody>
-    <form action="/action_page.php">
-        <input type="text" name="uno"><br>
-        <input type="text" name="dos"><br>
-    </form>   
+    <div class="tateti-container">
+        <input type="text" name="uno" class=""><br>
+        <input type="text" name="dos" class=""><br>
+        <input type="text" name="tres" class=""><br>
+        <input type="text" name="cuatro" class=""><br>
+        <input type="text" name="cinco" class=""><br>
+        <input type="text" name="seis" class=""><br>
+        <input type="text" name="siete" class=""><br>
+        <input type="text" name="ocho" class=""><br>
+        <input type="text" name="nueve" class=""><br>
+    </div>   
 </tbody>
 
 </html>
