--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
-
+    
 <tbody>
     <div class="tateti-container">
-        <input type="text" name="uno" class=""><br>
-        <input type="text" name="dos" class=""><br>
-        <input type="text" name="tres" class=""><br>
-        <input type="text" name="cuatro" class=""><br>
-        <input type="text" name="cinco" class=""><br>
-        <input type="text" name="seis" class=""><br>
-        <input type="text" name="siete" class=""><br>
-        <input type="text" name="ocho" class=""><br>
-        <input type="text" name="nueve" class=""><br>
+        <input type="text" name="uno" class="a1"><br>
+        <input type="text" name="dos" class="a2"><br>
+        <input type="text" name="tres" class="a3"><br>
+        <input type="text" name="cuatro" class="b1"><br>
+        <input type="text" name="cinco" class="b2"><br>
+        <input type="text" name="seis" class="b3"><br>
+        <input type="text" name="siete" class="c1"><br>
+        <input type="text" name="ocho" class="c2"><br>
+        <input type="text" name="nueve" class="c3"><br>
     </div>   
 </tbody>
 
