--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
-<html>
-    
-<tbody>
-    <div class="tateti-container">
-        <input type="text" name="uno" class="a1"><br>
-        <input type="text" name="dos" class="a2"><br>
-        <input type="text" name="tres" class="a3"><br>
-        <input type="text" name="cuatro" class="b1"><br>
-        <input type="text" name="cinco" class="b2"><br>
-        <input type="text" name="seis" class="b3"><br>
-        <input type="text" name="siete" class="c1"><br>
-        <input type="text" name="ocho" class="c2"><br>
-        <input type="text" name="nueve" class="c3"><br>
-    </div>   
-</tbody>
+<html>    
+    <head>
+        <title>Tateti</title>
+        <script src="index.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+    </head>
+    <body>
+        <div class="tateti-container">
+            <input type="text" name="uno" class="a1">
+            <input type="text" name="dos" class="a2">
+            <input type="text" name="tres" class="a3"><br>
+            <input type="text" name="cuatro" class="b1">
+            <input type="text" name="cinco" class="b2">
+            <input type="text" name="seis" class="b3"><br>
+            <input type="text" name="siete" class="c1">
+            <input type="text" name="ocho" class="c2">
+            <input type="text" name="nueve" class="c3"><br>
+        </div>   
+    </body>
 
 </html>
